# lib-tlv

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.sh
.github/workflows/: cmake-single-platform.yml
cmake/: CompilerOptions.cmake  PlatformSpecific.cmake  config.h.in  tlv-config.cmake.in
examples/: CMakeLists.txt  advanced_example.cpp  array_example.cpp  basic_example.cpp  dump_example.cpp  parsing_example.cpp
include/: AdvancedTLV.h  TLV.h  TLVParser.h  config.h.in
src/: AdvancedTLV.cpp  TLV.cpp  TLVParser.cpp
src/utilities/: TLVDumper.cpp  TLVPrinter.cpp
src/utilities/include/: HexDump.h  TLVDumper.h  TLVPrinter.h  TLVUtils.h
tests/: AdvancedTLVTests.cpp  CMakeLists.txt  TLVMemoryPerformanceTests.cpp  TLVParserTests.cpp  TLVTests.cpp  TLVUtilsTests.cpp
utilities/: CMakeLists.txt
utilities/include/: HexDump.h  TLVUtils.h
utilities/src/: HexDump.cpp  TLVUtils.cpp
utilities/tests/: CMakeLists.txt  TLVUtilsTests.cpp
